# cargo-apk

./: Cargo.toml  README.md
.github/workflows/: android_test.sh  publish.yml  rust.yml
cargo-apk/: Cargo.toml
cargo-apk/src/: apk.rs  main.rs
cargo-rapk/: CHANGELOG.md  Cargo.toml  README.md
cargo-rapk/src/: apk.rs  error.rs  main.rs  manifest.rs
ndk-build/: Cargo.toml
ndk-build/src/: apk.rs  cargo.rs  error.rs  lib.rs  manifest.rs  ndk.rs  zipnorm.rs
ndk-examples/: Cargo.toml  README.md
ndk-examples/examples/: hello_world.rs  jni_audio.rs  looper.rs
rndk/: CHANGELOG.md  Cargo.toml  README.md
rndk/src/: apk.rs  cargo.rs  lib.rs  manifest.rs  ndk.rs  zipnorm.rs
