[package]
name = "ndk-build"
version = "0.11.1"
authors = ["The Rust Windowing contributors"]
edition = "2024"
description = "Utilities for building Android binaries"
license = "MIT OR Apache-2.0"
keywords = ["android", "ndk", "apk"]
documentation = "https://docs.rs/ndk-build"
homepage = "https://github.com/rust-mobile/cargo-apk"
repository = "https://github.com/rust-mobile/cargo-apk"
rust-version = "1.85"

[dependencies]
dirs = "6.0.0"
dunce = "1"
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
which = "8"
zip = { version = "6", default-features = false, features = ["deflate"] }
