[package]
name = "rndk"
version = "0.12.0"
authors = ["The Rust Windowing contributors"]           # OAuthors
edition = "2024"
description = "Utilities for building Android binaries"
license = "MIT OR Apache-2.0"
keywords = ["android", "ndk", "apk"]
documentation = "https://docs.rs/rndk"
homepage = "https://github.com/mlm-games/cargo-rapk"
repository = "https://github.com/mlm-games/cargo-rapk"
rust-version = "1.85"

[dependencies]
dirs = "6.0.0"
dunce = "1"
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
which = "8"
zip = { version = "6", default-features = false, features = ["deflate"] }
atty = "0.2"
